--- a/layouts/partials/konami.html
+++ b/layouts/partials/konami.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="/static/js/gradius.js"></script>
+<script type="text/javascript" src="/js/gradius.js"></script>
 <script>
 var famicom = new Gradius(function() {
     window.location.href="42.html";
