support for aria landmarks

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
     {{ partial "header" . }}
     {{ partial "navigation" . }}
 
-    <main class="content" role="main">
+    <main class="content" role="main" id="contenu-principal">
 		{{ partial "post-list" . }}
         {{ partial "pagination" . }}
     </main>
