--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="headlines" itemscope itemtype="http://schema.org/Person">
+<header class="headlines" itemscope itemtype="http://schema.org/Person" role="banner">
     <h1 class="headlines__title"  itemprop="name">
         <a href="/" title="Retourner à l'accueil" itemprop="email"><span itemprop="givenName">Olivier</span> <span itemprop="familyName"> Fredon</span></a>
     </h1>
