--- a/layouts/partials/meta_twittercard.html
+++ b/layouts/partials/meta_twittercard.html
@@ -5,5 +5,5 @@
 <meta name="twitter:url" content="{{ .Permalink }}" />
 <meta name="twitter:image:src" content="{{ .Site.BaseUrl }}/media/twitter-card.jpg">
 <meta name="twitter:domain" content="{{ .Site.BaseURL }}">
-<meta name="twitter:site" content="@{{ .Site.Author.twitter }}" />
-<meta name="twitter:creator" content="@{{ .Site.Author.twitter }}" />
+<meta name="twitter:site" content="@{{ .Site.Params.twitter }}" />
+<meta name="twitter:creator" content="@{{ .Site.Params.twitter }}" />
