--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,5 +1,4 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="{{ .Site.Author.Name }}">
-<meta name="description" content="{{ .Description }}" />
-<meta name="keywords" content="{{ if .Keywords }}{{ range .Keywords }}{{ . }} {{ end }}{{end}}">
+<meta name="author" content="{{ .Site.Params.name }}">
+<meta name="description" content="{{ with .Site.Params.description }}{{ . }}{{ end }}" />
