--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,6 +1,6 @@
 <div class="post-meta">
     <section class="post-meta__date">
-        <time datetime="{{ .Date.Format "02 January 2006" }}">{{ .Date.Format "02 January 2006" }}</time>
+        <time datetime="{{ .Date.Format "02 January 2006" }}" itemprop="datePublished">{{ .Date.Format "02 January 2006" }}</time>
     </section>
     <section class="post-meta__tags">
         {{ range .Params.tags }}
@@ -12,7 +12,5 @@
         <a href="{{ .Site.BaseURL }}/categories/{{ . | urlize }}">{{ . }}</a>
         {{ end }}
     </section>
+    <meta itemprop="url" content="{{ .Permalink }}">
 </div>
-
-<meta itemprop="datePublished" content="{{ .Date.Format "02 January 2006" }}">
-<meta itemprop="url" content="{{ .Permalink }}">
