fix param author

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,6 +8,6 @@
 <link itemprop="url" href="{{ .Site.BaseURL }}">
 <link itemprop="email" href="mailto:hello@olivierfredon.com">
 <link itemprop="worksFor" href="http://www.jechange.fr">
-<meta itemprop="additionalName" content="{{ .Site.Author.pseudo }}">
+<meta itemprop="additionalName" content="{{ .Site.Params.pseudo }}">
 <meta itemprop="gender" content="male">
 <meta itemprop="nationality" content="France">
