fix naming conventions

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="legal" role="contentinfo">
-    <p>{{ .Site.Params.author }} {{ .Page.Now.Year }} Merci à <a href="http://gohugo.io" title="Générateur de site static en Go">Hugo</a> <a href="//github>com/the2ne/hugo-frais" title="Theme entièrement créé de mes dix doigts">Frais</a>. <em>Les cookies ça fait grossir, alors on s'en passe très bien.</em></p>
+    <p>{{ .Site.params.author }} {{ .Date.Format "2006" }} Merci à <a href="http://gohugo.io" title="Générateur de site static en Go">Hugo</a> <a href="//github>com/the2ne/hugo-frais" title="Theme entièrement créé de mes dix doigts">Frais</a>. <em>Les cookies ça fait grossir, alors on s'en passe très bien.</em></p>
 </footer>
