--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,9 +5,9 @@
     <h2 class="headlines__baseline" itemprop="jobTitle" lang="en">UI Designer &amp; <wbr>Front-End Developer</h2>
 </header>
 
-<link itemprop="url" href="{{ .Site.BaseURL }}">
+<link itemprop="url" href="{{ .Site.baseUrl }}">
 <link itemprop="email" href="mailto:hello@olivierfredon.com">
 <link itemprop="worksFor" href="http://www.jechange.fr">
-<meta itemprop="additionalName" content="{{ .Site.Params.pseudo }}">
+<meta itemprop="additionalName" content="{{ .Site.params.pseudo }}">
 <meta itemprop="gender" content="male">
 <meta itemprop="nationality" content="France">
