--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -3,7 +3,7 @@
         <li class="twitter">
             <a href="https://twitter.com/{{ .Site.Params.twitter }}" title="Follow me">
                 <span class="visua11y-hidden">Twitter</span>
-            <svg id="twitter" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img">
+            <svg id="twitter" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img" width="24" height="24">
                 <title>Twitter</title>
                 <path d="M26.3,6.3A6.4,6.4,0,0,0,29,2.8a11.8,11.8,0,0,1-3.9,1.6,5.9,5.9,0,0,0-4.4-2,6.3,6.3,0,0,0-6.1,6.4,6.7,6.7,0,0,0,.2,1.5A17,17,0,0,1,2.2,3.5a6.7,6.7,0,0,0-.8,3.2A6.5,6.5,0,0,0,4.1,12a5.9,5.9,0,0,1-2.8-.8h0a6.3,6.3,0,0,0,4.9,6.3l-1.6.2H3.5a6.1,6.1,0,0,0,5.7,4.5,11.8,11.8,0,0,1-7.6,2.7H.2a16.6,16.6,0,0,0,9.3,2.9c11.2,0,17.3-9.8,17.3-18.3,0-.3,0-.6,0-.8a12.7,12.7,0,0,0,3-3.3,11.7,11.7,0,0,1-3.5,1Zm0,0"/>
             </svg>
@@ -12,7 +12,7 @@
         <li class="github">
             <a href="https://github.com/{{ .Site.Params.github }}" title="Fork me">
                 <span class="visua11y-hidden">GitHub</span>
-                <svg id="github" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img">
+                <svg id="github" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img" width="24" height="24">
                     <title>GitHub</title>
                     <path d="M0,15.4A15.4,15.4,0,0,0,10.3,30c.8.1,1-.3,1-.7s0-1.3,0-2.6c-4.2.9-5.1-2.1-5.1-2.1a4,4,0,0,0-1.7-2.2c-1.4-1,.1-.9.1-.9A3.2,3.2,0,0,1,6.9,23a3.1,3.1,0,0,0,4.4,1.3,3.3,3.3,0,0,1,1-2.1c-3.3-.4-6.8-1.7-6.8-7.6A6,6,0,0,1,7,10.4a5.7,5.7,0,0,1,.1-4.1S8.4,6,11.2,8a13.9,13.9,0,0,1,7.5,0c2.9-2,4.1-1.6,4.1-1.6a5.7,5.7,0,0,1,.1,4.1,6,6,0,0,1,1.5,4.1c0,5.9-3.5,7.2-6.8,7.6a3.7,3.7,0,0,1,1,2.8c0,2.1,0,3.7,0,4.2s.3.9,1,.7A15.4,15.4,0,0,0,30,15.4,15.2,15.2,0,0,0,15,0,15.2,15.2,0,0,0,0,15.4Zm0,0"/>
                 </svg>
@@ -21,7 +21,7 @@
         <li class="linkedin">
             <a href="https://fr.linkedin.com/in/{{ .Site.Params.linkedin }}" title="About me">
                 <span class="visua11y-hidden">LinkedIn</span>
-                <svg id="linkedin" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img">
+                <svg id="linkedin" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img" width="24" height="24">
                     <title>LinkedIn</title>
                     <path d="M.8,9.6H6.6V30H.8V9.6ZM3.5,7.1h0A3.4,3.4,0,0,1,0,3.5,3.4,3.4,0,0,1,3.6,0,3.4,3.4,0,0,1,7.1,3.5,3.4,3.4,0,0,1,3.5,7.1ZM30,30H23.4V19.5c0-2.8-1-4.6-3.3-4.6a3.4,3.4,0,0,0-3.2,2.5,5.1,5.1,0,0,0-.1,1.7V30H10.2s.1-18.7,0-20.4h6.6v3.2c.4-1.4,2.5-3.4,5.8-3.4S30,12.4,30,18.7V30Zm0,0"/>
                 </svg>
