--- a/layouts/partials/meta_twittercard.html
+++ b/layouts/partials/meta_twittercard.html
@@ -4,6 +4,6 @@
 <meta name="twitter:description" content="{{ .Description }}" />
 <meta name="twitter:url" content="{{ .Permalink }}" />
 <meta name="twitter:image:src" content="{{ .Site.baseUrl }}/media/twitter-card.jpg">
-<meta name="twitter:domain" content="{{ .Site.baseURL }}">
+<meta name="twitter:domain" content="{{ .Site.baseUrl }}">
 <meta name="twitter:site" content="@{{ .Site.params.twitter }}" />
 <meta name="twitter:creator" content="@{{ .Site.params.twitter }}" />
