--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -4,12 +4,12 @@
     </section>
     <section class="post-meta__tags">
         {{ range .Params.tags }}
-        <a href="{{ $.Site.BaseURL }}tags/{{ . }}">{{ . }} </a>
+        <a href="{{ $.Site.baseUrl }}tags/{{ . }}">{{ . }} </a>
         {{ end }}
     </section>
     <section class="post-meta__categories">
         {{ range .Params.categories }}
-        <a href="{{ .Site.BaseURL }}/categories/{{ . | urlize }}">{{ . }}</a>
+        <a href="{{ .Site.baseUrl }}/categories/{{ . | urlize }}">{{ . }}</a>
         {{ end }}
     </section>
     <meta itemprop="url" content="{{ .Permalink }}">
