fix naming conventions

--- a/layouts/partials/meta_twittercard.html
+++ b/layouts/partials/meta_twittercard.html
@@ -3,7 +3,7 @@
 <meta name="twitter:title" content="{{ .Title }}" />
 <meta name="twitter:description" content="{{ .Description }}" />
 <meta name="twitter:url" content="{{ .Permalink }}" />
-<meta name="twitter:image:src" content="{{ .Site.baseUrl }}/media/twitter-card.jpg">
-<meta name="twitter:domain" content="{{ .Site.baseUrl }}">
-<meta name="twitter:site" content="@{{ .Site.params.twitter }}" />
-<meta name="twitter:creator" content="@{{ .Site.params.twitter }}" />
+<meta name="twitter:image:src" content="{{ .Site.BaseUrl }}/media/twitter-card.jpg">
+<meta name="twitter:domain" content="{{ .Site.BaseUrl }}">
+<meta name="twitter:site" content="@{{ .Site.Params.twitter }}" />
+<meta name="twitter:creator" content="@{{ .Site.Params.twitter }}" />
