--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,7 +1,7 @@
 <aside>
     <ul class="social-networks" lang="en">
         <li class="twitter">
-            <a href="https://twitter.com/{{ .Site.params.twitter }}" title="Follow me">
+            <a href="https://twitter.com/{{ .Site.Params.twitter }}" title="Follow me">
                 <span class="visua11y-hidden">Twitter</span>
             <svg id="twitter" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img" width="24" height="24">
                 <title>Twitter</title>
@@ -10,7 +10,7 @@
             </a>
         </li>
         <li class="github">
-            <a href="https://github.com/{{ .Site.params.github }}" title="Fork me">
+            <a href="https://github.com/{{ .Site.Params.github }}" title="Fork me">
                 <span class="visua11y-hidden">GitHub</span>
                 <svg id="github" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img" width="24" height="24">
                     <title>GitHub</title>
@@ -19,7 +19,7 @@
             </a>
         </li>
         <li class="linkedin">
-            <a href="https://fr.linkedin.com/in/{{ .Site.params.linkedin }}" title="About me">
+            <a href="https://fr.linkedin.com/in/{{ .Site.Params.linkedin }}" title="About me">
                 <span class="visua11y-hidden">LinkedIn</span>
                 <svg id="linkedin" class="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" aria-labelledby="title" role="img" width="24" height="24">
                     <title>LinkedIn</title>
