--- a/layouts/partials/head_includes.html
+++ b/layouts/partials/head_includes.html
@@ -8,6 +8,6 @@
 <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/manifest.json">
 <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#636363">
-<meta name="apple-mobile-web-app-title" content="{{ .Site.title }}">
-<meta name="application-name" content="{{ .Site.title }}">
+<meta name="apple-mobile-web-app-title" content="{{ .Site.Title }}">
+<meta name="application-name" content="{{ .Site.Title }}">
 <meta name="theme-color" content="#333333">
