fix params item and add pagination template

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,7 +16,7 @@
             </section>
         </article>
     </main>
-
+    {{ partial "pagination" . }}
     {{ partial "social" . }}
     {{ partial "footer" . }}
     {{ partial "konami" . }}
