--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
 <header class="headlines" itemscope itemtype="http://schema.org/Person" role="banner">
     <h1 class="headlines__title"  itemprop="name">
-        {{ if .IsHome }}<a href="/" title="Retourner à l'accueil">{{ end }}
+        {{ if .IsPage }}<a href="/" title="Retourner à l'accueil">{{ end }}
             <span itemprop="givenName">Olivier</span> <span itemprop="familyName"> Fredon</span>
-        {{ if .IsHome }}</a>{{ end }}
+        {{ if .IsPage }}</a>{{ end }}
     </h1>
     <h2 class="headlines__baseline" itemprop="jobTitle" lang="en">UI Designer &amp; <wbr>Front-End Developer</h2>
 </header>
