--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,4 +1,4 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="author" content="{{ .Site.Params.author }}">
-<meta name="description" content="{{ with .Description }}{{ . }}{{ end }}" />
+<meta name="description" content="{{ if .IsHome}}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}" />
