--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,4 +1,4 @@
-<div class="post-meta">
+<footer class="post-meta">
     <section class="post-meta__date">
         <time datetime="{{ .Date.Format "02 January 2006" }}" itemprop="datePublished">{{ .Date.Format "02 January 2006" }}</time>
     </section>
@@ -13,4 +13,4 @@
         {{ end }}
     </section>
     <meta itemprop="url" content="{{ .Permalink }}">
-</div>
+</footer>
