fix and add meta data

--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -13,4 +13,8 @@
         {{ end }}
     </section>
     <meta itemprop="url" content="{{ .Permalink }}">
+    <meta itemprop="author" content="{{ .Site.Params.author }}">
+    <meta itemprop="publisher" content="{{ .Site.Params.author }}">
+    <meta itemprop="headline" content="{{ .Description }}">
+    <meta itemprop="image" content="">
 </footer>
