--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,8 +1,8 @@
 {{ if .Site.Menus.main }}
-<nav class="menu" role="navigation" id="menu-principal" aria-label="menu principal">
-    <ul class="menu__wrapper">
+<nav class="menu wrapper" role="navigation" id="menu-principal" aria-label="menu principal">
+    <ul class="menu__items">
         {{ range .Site.Menus.main }}
-        <li class="nav nav-current"><a href="{{.URL}}">{{ .Name }}</a></li>
+        <li class="item"><a href="{{.URL}}">{{ .Name }}</a></li>
         {{ end }}
     </ul>
 </nav>
