--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,20 +1,20 @@
+{{ $baseurl := .Site.BaseURL }}
 <footer class="post-meta">
     <section class="post-meta__date">
-        <time datetime="{{ .Date.Format "02 January 2006" }}" itemprop="datePublished">{{ .Date.Format "02 January 2006" }}</time>
+        <time datetime="{{ .Date.Format "2006-01-02" }}" itemprop="datePublished">{{ .Date.Format "02 January 2006" }}</time>
     </section>
     <section class="post-meta__tags">
         {{ range .Params.tags }}
-        <a href="{{ $.Site.BaseURL }}tags/{{ . }}">{{ . }} </a>
+        <a href="{{ $baseurl }}tags/{{ . }}">{{ . }} </a>
         {{ end }}
     </section>
     <section class="post-meta__categories">
         {{ range .Params.categories }}
-        <a href="{{ $.Site.BaseURL }}/categories/{{ . | urlize }}">{{ . }}</a>
+        <a href="{{ $baseurl }}/categories/{{ . | urlize }}">{{ . }}</a>
         {{ end }}
     </section>
     <meta itemprop="url" content="{{ .Permalink }}">
     <meta itemprop="author" content="{{ .Site.Params.author }}">
-    <meta itemprop="publisher" content="{{ .Site.Params.author }}">
-    <meta itemprop="headline" content="{{ .Description }}">
-    <meta itemprop="image" content="">
+    <meta itemprop="wordCount" content="{{ .WordCount }}" />
+    <meta itemprop="timeRequired" content="{{ .ReadingTime }} Min" />
 </footer>
