fix index layout structure

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
 
         {{ partial "navigation" . }}
 
-        <main class="content wrapper" role="main" id="contenu-principal">
+        <main class="content" role="main" id="contenu-principal">
             {{ partial "post-list" . }}
             {{ partial "pagination" . }}
         </main>
