--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,13 +3,10 @@
 <body class="post-template">
     <div class="page">
 
-        <div class"wrapper">
-            {{ partial "header" . }}
-        </div>
-
+        {{ partial "header" . }}
         {{ partial "navigation" . }}
 
-        <main class="content wrapper" role="main" id="contenu-principal" itemscope itemtype="http://schema.org/Article">
+        <main class="content" role="main" id="contenu-principal" itemscope itemtype="http://schema.org/Article">
             <article class="post">
                 <header>
                     <h1 class="post-title" itemprop="name" role="heading" arial-level="1">{{ .Title }}</h1>
@@ -22,10 +19,8 @@
             </article>
         </main>
 
-        <div class"wrapper">
-            {{ partial "social" . }}
-            {{ partial "footer" . }}
-        </div>
+        {{ partial "social" . }}
+        {{ partial "footer" . }}
 
     </div>
 
