--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,15 +1,8 @@
-<header class="headlines" itemscope itemtype="http://schema.org/Person" role="banner">
-    <h1 class="headlines__title"  itemprop="name">
+<header class="headlines" role="banner">
+    <h1 class="headlines__title">
         {{ if .IsPage }}<a href="/" title="Retourner à l'accueil">{{ end }}
-            <span itemprop="givenName">Olivier</span> <span itemprop="familyName"> Fredon</span>
+            {{ .Site.Params.headline }}
         {{ if .IsPage }}</a>{{ end }}
     </h1>
-    <h2 class="headlines__baseline" itemprop="jobTitle" lang="en">UI Designer &amp; <wbr>Front-End Developer</h2>
-
-    <link itemprop="url" href="{{ .Site.BaseURL }}">
-    <link itemprop="email" href="mailto:hello@olivierfredon.com">
-    <link itemprop="worksFor" href="http://www.jechange.fr">
-    <meta itemprop="additionalName" content="{{ .Site.Params.pseudo }}">
-    <meta itemprop="gender" content="male">
-    <meta itemprop="nationality" content="France">
+    <h2 class="headlines__baseline" lang="en">{{ .Site.Params.baseline }}</h2>
 </header>
