--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}fr{{ end }}" prefix="og: http://ogp.me/ns#">
+<html class="no-js" lang="{{ .Site.LanguageCode }}" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="utf-8">
     <title>{{ if .IsHome }}{{ .Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
