Hugo Frais is not dead

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,29 +2,23 @@
 
 <body class="post-template">
     <div class="page">
-
         {{ partial "header" . }}
         {{ partial "navigation" . }}
-
-        <main class="content" role="main" id="contenu-principal" itemscope itemtype="http://schema.org/Article">
+        <main class="content" role="main" id="main-content" itemscope itemtype="http://schema.org/Article">
             <article class="post">
                 <header>
                     <h1 class="post-title" itemprop="name" role="heading" arial-level="1">{{ .Title }}</h1>
                 </header>
-
                 <section class="post-content" itemprop="articleBody">
                     {{ .Content }}
                 </section>
-                {{ partial "post-meta" . }}
+                <footer class="post-meta">
+                    {{ partial "post-meta" . }}
+                </footer>
             </article>
         </main>
-
-        {{ partial "social" . }}
         {{ partial "footer" . }}
-
     </div>
-
     {{ partial "js" . }}
-
 </body>
 </html>
