--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -1,12 +1,12 @@
 ////
-/// Configuration et Personnalisation
+/// Configuration and Customization
 ////
 
 
 // Typography
 
-$fontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$fontFamilyAlternative: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+$fontFamily:
+$fontFamilyAlternative: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $fontSize: 1em;
 $baseline: 1.5;
 
