--- a/static/sass/core.scss
+++ b/static/sass/core.scss
@@ -5,7 +5,7 @@
         "_mixins",
         "vendor/normalize",
         "custom/global",
+        "custom/layout",
         "custom/typography",
-        "custom/background",
         "custom/breakpoints"
 ;
