--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,2 +1,2 @@
-<script type="text/javascript" src="/js/vendor/konami.js"></script>
-<script type="text/javascript" src="/js/easteregg.js"></script>
+<!-- Add your js files -->
+<!-- e.g. <script type="text/javascript" src="/js/vendor/jquery.min.js"></script> -->
