--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,5 +1,5 @@
 {{ if .Site.Menus.main }}
-<nav class="menu wrapper" role="navigation" id="menu-principal" aria-label="menu principal">
+<nav class="menu" role="navigation" id="main-menu">
     <ul class="menu__items">
         {{ range .Site.Menus.main }}
         <li class="item"><a href="{{.URL}}">{{ .Name }}</a></li>
