font stack and css build

--- a/static/sass/_settings.scss
+++ b/static/sass/_settings.scss
@@ -5,8 +5,8 @@
 
 // Typography
 
-$fontFamily:
-$fontFamilyAlternative: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$fontFamilyAlternative: Georgia,Times,Times New Roman,serif;
 $fontSize: 1em;
 $baseline: 1.5;
 
