--- a/static/sass/custom/typography.scss
+++ b/static/sass/custom/typography.scss
@@ -12,6 +12,9 @@ html {
 }
 
 .headlines__baseline {
-    font-family: $fontFamilyAlternative;
     font-size: $fontSize;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: $fontFamilyAlternative;
 }
